--- a/h1.md
+++ b/h1.md
@@ -1,4 +1,16 @@
 ## x)
+Herrasmieshakkerit: Yleinen hyvä, vieraana Jukka Niva 18 JUN - 1h 9min. 
+
+Herrat oli huolissaan nykyisestä verkon tilasta ja disinformaatiosta. Algoritmien objektiivisuudesta tai sen totaalisesta puuttumisesta. Ihmisten omien uskomuksien vahvistamisesta feedien koukutuksen perustana ja tästä johtuvasta kuplautumisesta.
+
+Hutchins et al 2011: Intelligence-Driven Computer Network Defense Informed by Analysis of Adversary Campaigns and Intrusion Kill Chains
+In this article the writer was worried that the traditional defenses like the antivirus and intrusion detection systems are not efective enough against advanced threats. To counter these lockheed and martin have an idea about intelligence-driven defence: using kill chain model to map attackers actions, link intrusions into campaigns and feed intelligence back into defenses. This way they can fight the threat itself.
+
+Kill chain has seven phases: Reconnaissance, Weaponization: creating the payload trojan etc.
+Delivery(email,websites,usb), Exploitation(code gets triggered), Installation(creating backdoors), Command & Control(connection back to attackers infrastructure), Actions on Objectives(theft etc.)
+
+KKO 2003:36
+Asianomainen oli syyllistynyt tietomurron yritykseen. Hyökkäys oli pysähtynyt palomuuriin. Hovioikeus arvioi että A oli aiheuttanut osuuskunnalle 20 000 ja yhtiölle 55 000 markan määräisen vahingon. Tekijä oli 17-vuotias ja häntä oli pidetty atk-alan asiantuntijana.
 
 ## a)
 Hyper-V Kali-Linux-2025.2
