--- a/h1.md
+++ b/h1.md
@@ -31,9 +31,12 @@ Ei menny ihan ykkösellä hyper-veehen. Hyper-v ei osannu lukee vmdk fileja.
 
 ## f)
 
+!(Tunkeutumistestaus\ping.png)
+Kali löytää metasploitablen pingaamalla.
 
 ## g)
-
-
+!(Tunkeutumistestaus\metasloitable2.png)
+Metasploitable selaimessa.
 ## h)
+!(Tunkeutumistestaus\nmap-metasploitable.png)
 
