--- a/h1.md
+++ b/h1.md
@@ -31,12 +31,12 @@ Ei menny ihan ykkösellä hyper-veehen. Hyper-v ei osannu lukee vmdk fileja.
 
 ## f)
 
-!(Tunkeutumistestaus\ping.png)
+![img](Tunkeutumistestaus/ping.png)
 Kali löytää metasploitablen pingaamalla.
 
 ## g)
-!(Tunkeutumistestaus\metasloitable2.png)
+![img](Tunkeutumistestaus/metasloitable2.png)
 Metasploitable selaimessa.
 ## h)
-!(Tunkeutumistestaus\nmap-metasploitable.png)
+![img](Tunkeutumistestaus/nmap-metasploitable.png)
 
