--- a/h1.md
+++ b/h1.md
@@ -31,12 +31,12 @@ Ei menny ihan ykkösellä hyper-veehen. Hyper-v ei osannu lukee vmdk fileja.
 
 ## f)
 
-![img](Tunkeutumistestaus/ping.png)
+![img](ping.png)
 Kali löytää metasploitablen pingaamalla.
 
 ## g)
-![img](Tunkeutumistestaus/metasloitable2.png)
+![img](metasloitable2.png)
 Metasploitable selaimessa.
 ## h)
-![img](Tunkeutumistestaus/nmap-metasploitable.png)
+![img](nmap-metasploitable.png)
 
