--- a/h1.md
+++ b/h1.md
@@ -39,4 +39,5 @@ Kali löytää metasploitablen pingaamalla.
 Metasploitable selaimessa.
 ## h)
 ![img](nmap-metasploitable.png)
+22 portti voisi kiinnostaa ssh avaimien takia. 1524 portin kautta pääsy root shelliin.
 
