--- a/h1.md
+++ b/h1.md
@@ -27,12 +27,15 @@ näyttäis että kaikki 1000 porttia oli kiinni.
 Asensin ssh:n ja apachen eli nyt scanneri näyttää että on host up ja 998 suljettua porttia.
 
 ## e)
-Ei menny ihan ykkösellä hyper-veehen. Hyper-v ei osannu lukee vmdk fileja.
+Ei menny ihan ykkösellä hyper-veehen. Hyper-v ei osannu lukee vmdk fileja. Edit: läppärillä otettu virtualbox käyttöön ja sillä ollu nyt vähän parempi menestys.
 
 ## f)
 
 ![img](ping.png)
+Virtualboxista piti asettaa kalille ja metasploitablelle sama host only network adapter. Metsploitablen confaamisessa piti ainakin muistaa ottaa pois I/O APIC, disable EFI, käyttää vain yhtä prosessoria. Näillä muutoksilla poistui bios bugi: 8254.
+
 Kali löytää metasploitablen pingaamalla.
+ping -c 4 192.168.56.11
 
 ## g)
 ![img](metasloitable2.png)
@@ -40,4 +43,8 @@ Metasploitable selaimessa.
 ## h)
 ![img](nmap-metasploitable.png)
 22 portti voisi kiinnostaa ssh avaimien takia. 1524 portin kautta pääsy root shelliin.
+
+Lähteet:
+chatgpt.com troubleshoottaamiseen
+terokarvinen.com vinkit
 
